--- a/src/Makefile
+++ b/src/Makefile
@@ -11,12 +11,16 @@ SRCS = main.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 command_line.f9
 OBJS = main.o units.o random.o mcmc.o kinds.o data.o command_line.o dump.o parser.o scoring.o constants.o errors.o averages.o cost.o mpi_wrapper.o map.o fasta.o
 SRCS-eval = eval.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 eval_command_line.f90 dump.f90 parser.f90 scoring.f90 constants.f90 errors.f90 averages.f90 cost.f90 mpi_wrapper.f90 map.f90 fasta.f90
 OBJS-eval = eval.o units.o random.o mcmc.o kinds.o data.o eval_command_line.o dump.o parser.o scoring.o constants.o errors.o averages.o cost.o mpi_wrapper.o map.o fasta.o
+SRCS-sample = sample.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 sample_command_line.f90 dump.f90 parser.f90 scoring.f90 constants.f90 errors.f90 averages.f90 cost.f90 mpi_wrapper.f90 map.f90 fasta.f90
+OBJS-sample = sample.o units.o random.o mcmc.o kinds.o data.o sample_command_line.o dump.o parser.o scoring.o constants.o errors.o averages.o cost.o mpi_wrapper.o map.o fasta.o
 
-all: mcdca mcdca-eval
+all: mcdca mcdca-eval mcdca-sample
 mcdca: $(OBJS) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
 mcdca-eval: $(OBJS-eval) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-eval) $(LIBS)
+mcdca-sample: $(OBJS-sample) 
+	$(FC) $(LDFLAGS) -o $@ $(OBJS-sample) $(LIBS)
 
 .SUFFIXES: $(SUFFIXES) .f90 .f
 
@@ -44,6 +48,7 @@ cost.o: cost.f90 kinds.o
 errors.o: errors.f90 kinds.o constants.o
 command_line.o: command_line.f90 kinds.o units.o constants.o
 eval_command_line.o: eval_command_line.f90 kinds.o units.o constants.o
+sample_command_line.o: sample_command_line.f90 kinds.o units.o constants.o
 scoring.o: scoring.f90 kinds.o constants.o 
 data.o: data.f90 kinds.o parser.o constants.o fasta.o units.o 
 averages.o: averages.f90 kinds.o
@@ -51,7 +56,8 @@ mcmc.o: mcmc.f90 kinds.o dump.o constants.o averages.o
 mpi_wrapper.o: mpi_wrapper.f90 kinds.o #mpi
 map.o: map.f90 units.o kinds.o mpi_wrapper.o mcmc.o dump.o data.o constants.o cost.o # mpi
 main.o: main.f90 command_line.o mpi_wrapper.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o #mpi
-eval.o: eval.f90 eval_command_line.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o #mpi
+eval.o: eval.f90 eval_command_line.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o 
+sample.o: sample.f90 sample_command_line.o mpi_wrapper.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o #mpi
 
 .PHONY: default clean realclean debug showtargets
 
@@ -61,7 +67,7 @@ clean:
 
 # realclean: remove all regenerable files, including executables
 realclean: clean
-	$(RM) $(EXE) $(OBJS) $(OBJS-eval)
+	$(RM) $(EXE) $(OBJS) $(OBJS-eval) $(OBJS-sample)
 
 # debug: debug options (enable D comments lines, disable -O for ABSOFT)
 debug:
