executables list in Makefile
Former-commit-id: b420b917e792a232271aed05994f27d28dd659b0 [formerly bca3e4091cd28a16274ad9a3334a2f3aef3a9d29]
Former-commit-id: 447cfe2a4c61c888def62493e847b90f3e5504c9 [formerly 8578839cd8c21f2c209b34e1a4854d3412efec3e]
Former-commit-id: 02df212b427d34ecff5fc088967bcc29eab92123

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-EXE = mcdca
+EXE = mcdca mcdca-eval mcdca-sample
 FC = mpif90
 FFLAGS = -O2 -fconvert=little-endian
 # important: use -heap-arrays with the Intel ifort 
@@ -14,7 +14,7 @@ OBJS-eval = eval.o units.o random.o mcmc.o kinds.o data.o eval_command_line.o du
 SRCS-sample = sample.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 sample_command_line.f90 dump.f90 parser.f90 scoring.f90 constants.f90 errors.f90 averages.f90 cost.f90 mpi_wrapper.f90 map.f90 fasta.f90
 OBJS-sample = sample.o units.o random.o mcmc.o kinds.o data.o sample_command_line.o dump.o parser.o scoring.o constants.o errors.o averages.o cost.o mpi_wrapper.o map.o fasta.o
 
-all: mcdca mcdca-eval mcdca-sample
+all: $(EXE)
 mcdca: $(OBJS) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS) $(LIBS)
 mcdca-eval: $(OBJS-eval) 
