executables list in Makefile
Former-commit-id: ac94521f091759b4cd1494403a2e07b13fc284f8 [formerly ab4040383fc408308a502ac800e6d1d9dbcd82eb]
Former-commit-id: 9efbeb1fcb2b4431b914e6c110a17524b0710b00 [formerly c641b3c171199ab753dbd81fe664692eb47d8a57]
Former-commit-id: 4204bf91003d9c80a0086dd4eeb34924b0a1ac6e

--- a/src/Makefile
+++ b/src/Makefile
@@ -57,7 +57,7 @@ mpi_wrapper.o: mpi_wrapper.f90 kinds.o #mpi
 map.o: map.f90 units.o kinds.o mpi_wrapper.o mcmc.o dump.o data.o constants.o cost.o # mpi
 main.o: main.f90 command_line.o mpi_wrapper.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o #mpi
 eval.o: eval.f90 eval_command_line.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o 
-sample.o: sample.f90 sample_command_line.o mpi_wrapper.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o #mpi
+sample.o: sample.f90 sample_command_line.o random.o kinds.o units.o dump.o constants.o errors.o mcmc.o
 
 .PHONY: default clean realclean debug showtargets
 
