added install/uninstall targets to Makefile
Former-commit-id: 9bec82e8e8004cea09ec2219a1530c5da74caa1f [formerly d44bad0f9cf1e9ca158b4b857c36d9e643c01820]
Former-commit-id: 9ec030438a6d5c3c000a2dee8d424f049689bd5a

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,6 @@
+#INSTALLDIR=/usr/local/bin
+INSTALLDIR=~/.local/bin
+
 EXE = mcdca-eval mcdca-sample mcdca-learn
 FC = mpif90
 FFLAGS = -O2 -fconvert=little-endian
@@ -49,7 +52,14 @@ learn.o: learn.f90 learn_command_line.o mpi_wrapper.o random.o kinds.o units.o d
 eval.o: eval.f90 eval_command_line.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o errors.o mcmc.o 
 sample.o: sample.f90 sample_command_line.o random.o kinds.o units.o dump.o constants.o errors.o mcmc.o
 
-.PHONY: default clean realclean debug showtargets
+.PHONY: default install uninstall clean realclean debug showtargets
+
+install: $(EXE)
+	mkdir -p $(INSTALLDIR)
+	cp mcdca-* $(INSTALLDIR)
+
+uninstall:
+	rm -f $(INSTALLDIR)/mcdca-*
 
 # clean: remove useless files, but keep executables
 clean:
