simplified error messages in sample
Former-commit-id: db0e53aa14e286a6076a318f481ec66b42167f46 [formerly 94275a75d7a26a7f32c3053c29eb84ca93388059]
Former-commit-id: 0f462e34665b7e0b4dcf448086a33ae6a2772570

--- a/src/Makefile
+++ b/src/Makefile
@@ -43,7 +43,7 @@ cost.o: cost.f90 kinds.o
 errors.o: errors.f90 kinds.o constants.o
 learn_command_line.o: learn_command_line.f90 kinds.o units.o constants.o
 eval_command_line.o: eval_command_line.f90 kinds.o units.o constants.o arguments.o
-sample_command_line.o: sample_command_line.f90 kinds.o units.o constants.o
+sample_command_line.o: sample_command_line.f90 kinds.o units.o constants.o arguments.o
 scoring.o: scoring.f90 kinds.o constants.o 
 data.o: data.f90 kinds.o parser.o constants.o fasta.o units.o 
 averages.o: averages.f90 kinds.o
