learn_command_line print errors
Former-commit-id: 26c858c1fd833a92353e8b8f6ff4d02cc65f981a [formerly 2e3cc3849a157920c500bd25d544fbeee0cb11b2]
Former-commit-id: 9e52104a83c79f489203074d63de0f345d78a080

--- a/src/Makefile
+++ b/src/Makefile
@@ -41,7 +41,7 @@ random.o: random.f90 kinds.o
 dump.o: dump.f90 kinds.o units.o random.o parser.o constants.o fasta.o
 cost.o: cost.f90 kinds.o
 errors.o: errors.f90 kinds.o constants.o
-learn_command_line.o: learn_command_line.f90 kinds.o units.o constants.o
+learn_command_line.o: learn_command_line.f90 kinds.o units.o constants.o arguments.o
 eval_command_line.o: eval_command_line.f90 kinds.o units.o constants.o arguments.o
 sample_command_line.o: sample_command_line.f90 kinds.o units.o constants.o arguments.o
 scoring.o: scoring.f90 kinds.o constants.o 
