solved m2c in Makefile
Former-commit-id: 89f8db570d704d349996ca2e94f36947ba60b55d

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,6 +30,8 @@ mcsg-sample: $(OBJS-sample)
 .f90.o:
 	$(FC) $(FFLAGS) -c $<
 
+%.o: %.mod
+
 kinds.o: kinds.f90
 mpi_wrapper.o: mpi_wrapper.f90 kinds.o #mpi
 constants.o: constants.f90
