renamed printchk to getprm and added to Makefile
Former-commit-id: 57e44c24081fb0fc2efdba2df1e38896a449314a

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@
 INSTALLDIR=~/.local/bin
 
 EXE = mcsg-eval mcsg-sample mcsg-learn
-TOOLS = printchk
+TOOLS = mcsg-getprm
 FC = mpif90
 FFLAGS = -O2 -fconvert=little-endian
 #FFLAGS = -fast -heap-arrays # ifort (important: use -heap-arrays)
@@ -14,8 +14,8 @@ SRCS-eval = eval.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 eval_comma
 OBJS-eval = eval.o units.o random.o mcmc.o kinds.o data.o eval_command_line.o dump.o parser.o scoring.o constants.o averages.o cost.o mpi_wrapper.o map.o fasta.o arguments.o
 SRCS-sample = sample.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 sample_command_line.f90 dump.f90 parser.f90 scoring.f90 constants.f90 averages.f90 cost.f90 mpi_wrapper.f90 map.f90 fasta.f90 arguments.f90
 OBJS-sample = sample.o units.o random.o mcmc.o kinds.o data.o sample_command_line.o dump.o parser.o scoring.o constants.o averages.o cost.o mpi_wrapper.o map.o fasta.o arguments.o
-SRCS-pchk = printchk.f90 kinds.f90 constants.f90 units.f90 arguments.f90
-OBJS-pchk = printchk.o kinds.o constants.o units.o arguments.o
+SRCS-pchk = getprm.f90 kinds.f90 constants.f90 units.f90 arguments.f90
+OBJS-pchk = getprm.o kinds.o constants.o units.o arguments.o
 
 all: $(EXE) $(TOOLS)
 mcsg-learn: $(OBJS-learn) 
@@ -24,7 +24,7 @@ mcsg-eval: $(OBJS-eval)
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-eval) $(LIBS)
 mcsg-sample: $(OBJS-sample) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-sample) $(LIBS)
-printchk: $(OBJS-pchk) 
+mcsg-getprm: $(OBJS-pchk) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-pchk) $(LIBS)
 
 .SUFFIXES: $(SUFFIXES) .f90 .f
@@ -58,7 +58,7 @@ map.o: map.f90 units.o kinds.o mpi_wrapper.o mcmc.o dump.o data.o constants.o co
 learn.o: learn.f90 learn_command_line.o mpi_wrapper.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o mcmc.o #mpi
 eval.o: eval.f90 eval_command_line.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o mcmc.o 
 sample.o: sample.f90 sample_command_line.o random.o kinds.o units.o dump.o constants.o mcmc.o
-printck.o = printchk.f90 kinds.o constants.o units.o arguments.o
+getprm.o = getprm.f90 kinds.o constants.o units.o arguments.o
 
 .PHONY: default install uninstall clean realclean debug showtargets
 
