--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ INSTALLDIR=~/.local/bin
 EXE = elss-eval elss-sample elss-learn
 TOOLS = pchk
 FC = mpif90
-FFLAGS = -O2 -fconvert=little-endian -std=f2008
+FFLAGS = -O2 -fconvert=little-endian -std=f2008 -fimplicit-none
 #FFLAGS = -fast -heap-arrays # ifort (important: use -heap-arrays)
 #FFLAGS = -O3 -ffast-math # gfortran
 LDFLAGS = -s 
