rename pchk to elss-pchk; add pchk to test
Former-commit-id: 259f12ad5a5256d3fe9f57bb2676cfeed02efd44 [formerly 656c6ffbf56368e18e41a14c86223b2300557dc4]
Former-commit-id: f40be63f7507626a17abcc4b058f55d9f7c53112 [formerly 4300d7c644588d0c766c474fd059fd5f90a05c38]
Former-commit-id: fdd95c3ec7815fcb87d7fc0d2760342597dc4cff

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ bindir=bin
 DESTDIR=/usr/local
 
 EXE = elss-eval elss-sample elss-learn
-TOOLS = pchk
+TOOLS = elss-pchk
 FC = mpif90
 FFLAGS = -O2 -fconvert=little-endian -std=f2008 -fimplicit-none
 #FFLAGS = -fast -heap-arrays # ifort (important: use -heap-arrays)
@@ -25,7 +25,7 @@ elss-eval: $(OBJS-eval)
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-eval) $(LIBS)
 elss-sample: $(OBJS-sample) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-sample) $(LIBS)
-pchk: $(OBJS-pchk) 
+elss-pchk: $(OBJS-pchk) 
 	$(FC) $(LDFLAGS) -o $@ $(OBJS-pchk) $(LIBS)
 
 .SUFFIXES: $(SUFFIXES) .f90 .f
