--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@ OBJS-eval = eval.o units.o random.o mcmc.o kinds.o data.o eval_command_line.o du
 SRCS-sample = sample.f90 units.f90 random.f90 mcmc.f90 kinds.f90 data.f90 sample_command_line.f90 dump.f90 parser.f90 scoring.f90 constants.f90 averages.f90 cost.f90 mpi_wrapper.f90 map.f90 fasta.f90 arguments.f90
 OBJS-sample = sample.o units.o random.o mcmc.o kinds.o data.o sample_command_line.o dump.o parser.o scoring.o constants.o averages.o cost.o mpi_wrapper.o map.o fasta.o arguments.o
 SRCS-pchk = pchk.f90 kinds.f90 constants.f90 units.f90 arguments.f90
-OBJS-pchk = pchk.o kinds.o constants.o units.o arguments.o
+OBJS-pchk = pchk.o kinds.o constants.o units.o arguments.o parser.o
 
 all: $(EXE) $(TOOLS)
 elss-learn: $(OBJS-learn) 
@@ -59,7 +59,7 @@ map.o: map.f90 units.o kinds.o mpi_wrapper.o mcmc.o dump.o data.o constants.o co
 learn.o: learn.f90 learn_command_line.o mpi_wrapper.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o mcmc.o #mpi
 eval.o: eval.f90 eval_command_line.o random.o kinds.o units.o data.o map.o dump.o scoring.o constants.o mcmc.o 
 sample.o: sample.f90 sample_command_line.o random.o kinds.o units.o dump.o constants.o mcmc.o
-pchk.o = pchk.f90 kinds.o constants.o units.o arguments.o
+pchk.o = pchk.f90 kinds.o constants.o units.o arguments.o parser.o
 
 .PHONY: default install uninstall clean realclean debug showtargets
 
