new ref files in tests
Former-commit-id: a0a32ea0617d97c3685c74779c552d5fef5a78dd

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 src/*.o
 src/*.mod
 test/*
-!test/0.TRJ
 !test/10.fa
+!test/eval.ref.out
+!test/sample.ref.out
 !cv.bash
 !run-test.bash
 user_guide/*
